Use selenium to get it to work with twitter's new stuff

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -14,6 +14,16 @@ RUN echo ". profile.sh" >> "/root/.bashrc"
 
 RUN apt-get update && apt-get install ffmpeg=7:4.3.4-0+deb11u1 -y
 
+# Chrome
+RUN wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add - && \
+    sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list' && \
+    apt-get update && \
+    apt-get install -y google-chrome-stable=106.0.5249.119-1
+# Chromedriver
+RUN wget -O /tmp/driver.zip https://chromedriver.storage.googleapis.com/106.0.5249.61/chromedriver_linux64.zip && \
+    unzip /tmp/driver.zip -d /usr/local/bin/ && \
+    rm /tmp/driver.zip
+
 COPY poetry.* ./
 COPY pyproject.toml ./
 RUN poetry install
