--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -39,5 +39,6 @@
   ],
   "mounts": [
     "source=picture-to-burn-bashhistory,target=/commandhistory,type=volume"
-  ]
+  ],
+  "initializeCommand": "poetry install"
 }
