--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,11 +6,8 @@ authors = []
 
 [tool.poetry.dependencies]
 python = "^3.10"
-cssselect = "^1.1.0"
-docopt = "^0.6.2"
-lxml = "^4.9.1"
-requests = "^2.28.1"
 fire = "^0.4.0"
+selenium = "^4.5.0"
 
 [tool.poetry.dev-dependencies]
 black = "^22.6.0"
