Latest template, sneak in build fix

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,10 +1,11 @@
-FROM python:3.10@sha256:745efdfb7e4aac9a8422bd8c62d8bc35a693e8979a240d29677cb03e6aa91052
+# 3.11.0-bullseye on 2022-10-30
+FROM python@sha256:3e2e743ca3027c375a13ee7b9b0f7757b0091501a7556563afbc8000b5c862a5
 
 # For persisting bash history
 RUN SNIPPET="export PROMPT_COMMAND='history -a' && export HISTFILE=/commandhistory/.bash_history" && echo $SNIPPET >> "/root/.bashrc"
 
 # Poetry
-RUN curl -sSL https://install.python-poetry.org | python3 - --version 1.2.0
+RUN curl -sSL https://install.python-poetry.org | python3 - --version 1.2.2
 ENV PATH /root/.local/bin:${PATH}
 
 # Is this a good way to add stuff on load?
@@ -18,7 +19,7 @@ RUN apt-get update && apt-get install ffmpeg=7:4.3.4-0+deb11u1 -y
 RUN wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add - && \
     sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list' && \
     apt-get update && \
-    apt-get install -y google-chrome-stable=106.0.5249.119-1
+    apt-get install -y google-chrome-stable=107.0.5304.87-1
 # Chromedriver
 RUN wget -O /tmp/driver.zip https://chromedriver.storage.googleapis.com/106.0.5249.61/chromedriver_linux64.zip && \
     unzip /tmp/driver.zip -d /usr/local/bin/ && \
