--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -40,5 +40,5 @@
   "mounts": [
     "source=picture-to-burn-bashhistory,target=/commandhistory,type=volume"
   ],
-  "initializeCommand": "poetry install"
+  "postStartCommand": "poetry install"
 }
