--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,15 +5,15 @@ description = ""
 authors = []
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "^3.11"
 fire = "^0.4.0"
 selenium = "^4.5.0"
 
-[tool.poetry.dev-dependencies]
-black = "^22.6.0"
-pytest = "^7.1.2"
-pylint = "^2.14.4"
-mypy = "^0.961"
+[tool.poetry.group.dev.dependencies]
+black = "^22.10.0"
+pytest = "^7.2.0"
+pylint = "^2.15.5"
+mypy = "^0.982"
 
 [build-system]
 requires = ["poetry-core"]
